--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.2.1",
     "react-spinners": "^0.11.0"
@@ -22,5 +23,8 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
+  },
+  "react-dotenv": {
+    "whitelist": ["api_key"]
   }
 }
